@@ -1,4 +1,4 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/sfemovie-9999.ebuild,v 1.2 2012/03/24 13:44:53 frostwork Exp $
 
@@ -9,9 +9,9 @@ inherit cmake-utils eutils git-2 multilib
 #MY_P="SFML-${PV}"
 DESCRIPTION="ffmpeg based movie library for SFML"
 HOMEPAGE="https://github.com/Yalir/sfeMovie"
-EGIT_REPO_URI="git://github.com/Yalir/sfeMovie.git"
+EGIT_REPO_URI="https://github.com/Yalir/sfeMovie.git"
 
-LICENSE="as-is"
+LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS=""
 IUSE=""
